# ros_monitor

./: CMakeLists.txt  README.md  package.xml  setup.py
cfg/: ex.txt  node_lst.yaml  topic_lst.yaml
data/: diag.json  diag_1743161848.8686526.json  diag_20250328_203605.json
launch/: ros_monitor.launch  vehicle_diag.launch
msg/: KeyValue.msg  MonitoringInfo.msg
msgs/: SystemStatus.msg
scripts/: analyzer_node.py  cpu_monitor.csv  diag_listener.py  dynamic_node_connect copy.py  dynamic_node_connect.py  filtered_topics_hzbw.py  get_node_info.py  get_node_resource copy 2.py  get_node_resource copy.py  get_node_resource.py  get_nodes_resource.py  get_topic.py  get_topic_hzbw.py  get_topic_hzbw_class copy.py  get_topic_hzbw_class.py  get_topic_info.py  gpu_proc_monitor.py  gui copy 2.py  gui.py  gui_db.py  init_db.py  lit.py  logger.py  main.py  main_ui.py  node_hz_bw.py  node_info copy.py  node_info_subproc.py  nodes_gpu_resource.py  nodes_resource.py  roo.py  ros_topic.py  ros_tracker.py  sensor_status.py  status_ui.py  sys_status.py  sys_status_monitor.py  test.cpp  test.py  test1.py  (+9 more)
scripts/GUI/: gui.py  main_ui.py  status_ui copy 2.py  status_ui.py  test.py
scripts/core/: core.py
scripts/cpp/: get_node_resource.cpp  get_nodes_resource.cpp  sys_status.cpp  sys_status_def.cpp  total_resource copy.cpp  total_resource.cpp
scripts/listener/: dynamic_node_connect.py  node_connect.py  node_connect_check.py  sys_status.cpp  sys_status.py
scripts/monitoring/: nodes_resource_core.py  sys_resource_core.py  topics_hzbw_core.py
scripts/node/: Cemera_status.py  camera_status.py  node_data.py  sensor_status.py  sys_status.py
scripts/nodes_monitor/: get_node_resource123.py
scripts/ros_monitor/: node_monitor.py
scripts/system_monitor/: cpu_monitor.py  mem_monitor.py  net_monitor.py  ntp_monitor.py
scripts/test/: listener.py  status_ui copy.py
scripts/tmp/: gui.py  nodes_resource.py  topics_hzbw copy.py  topics_hzbw.py  total_resource.py
scripts/ui/: main.py  monitor.py  ros_tracker.py  ui copy.py
scripts/utils/: randm_float_pub.cpp
